--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,6 @@
 .footer-container {
-    width: 100vw;
+    width: 100%;
+    max-width: 100vw;
 }
 
 .footer {
